--- a/frontend/src/styles/Banner.css
+++ b/frontend/src/styles/Banner.css
@@ -2,13 +2,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #f6a9af;
+  /* background-color: #f6a9af; */
   padding-top: 30px;
   padding-bottom: 30px;
+  background-image: url(../assets/bg-opn.png);
+  color: white;
 }
 
-h1,
-h4,
-h5 {
+#h-pad{
   padding: 10px;
 }
