--- a/frontend/src/styles/Card.css
+++ b/frontend/src/styles/Card.css
@@ -9,9 +9,20 @@
   justify-content: space-around;
 }
 
+.container-check{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
 .container-detail {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  max-width: 100px;
+}
+
+input{
+  cursor: pointer;
+  height: 20px;
+  width: 20px;
 }
